// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a page with next and previous links correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  line-height: 28px;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  color: #001E2B;
}

.emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  line-height: 13px;
  color: #016BF8;
}

.emotion-1>code {
  color: #016BF8;
}

.emotion-1:focus,
.emotion-1:hover {
  text-decoration-line: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-1:focus {
  text-decoration-color: #016BF8;
  outline: none;
}

.emotion-1:hover {
  text-decoration-color: #E8EDEB;
}

.emotion-2 {
  line-height: 28px;
}

<div
    class="sc-bcXHqe eFamjP"
  >
    <div
      class="sc-gswNZR UJFxm"
    >
      <span
        class="emotion-0"
      >
        ← 
      </span>
      <a
        class="emotion-1 emotion-2"
        href="/drivers/csharp/"
        title="Previous Section"
      >
        MongoDB C#/.NET Driver
      </a>
    </div>
    <div
      class="sc-gswNZR UJFxm"
    >
      <a
        class="emotion-1 emotion-2"
        href="/drivers/csharp/"
        title="Next Section"
      >
        Java MongoDB Driver
      </a>
      <span
        class="emotion-0"
      >
         →
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders a page with no next link correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  line-height: 28px;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  color: #001E2B;
}

.emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  line-height: 13px;
  color: #016BF8;
}

.emotion-1>code {
  color: #016BF8;
}

.emotion-1:focus,
.emotion-1:hover {
  text-decoration-line: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-1:focus {
  text-decoration-color: #016BF8;
  outline: none;
}

.emotion-1:hover {
  text-decoration-color: #E8EDEB;
}

.emotion-2 {
  line-height: 28px;
}

<div
    class="sc-bcXHqe eFamjP"
  >
    <div
      class="sc-gswNZR UJFxm"
    >
      <span
        class="emotion-0"
      >
        ← 
      </span>
      <a
        class="emotion-1 emotion-2"
        href="/drivers/go/"
        title="Previous Section"
      >
        MongoDB Go Driver
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders a page with no previous link correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-size: 13px;
  line-height: 20px;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  line-height: 13px;
  color: #016BF8;
  font-weight: 400;
  display: inline;
  line-height: 28px;
}

.emotion-0:hover,
.emotion-0:focus,
.emotion-0:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:focus {
  outline: none;
}

.emotion-1 {
  position: relative;
}

.emotion-1::after {
  content: '';
  position: absolute;
  width: 100%;
  height: 2px;
  bottom: -4px;
  left: 0;
  border-radius: 2px;
}

.lg-ui-0001:focus .emotion-1::after {
  background-color: #0498EC;
}

.lg-ui-0001:hover .emotion-1::after {
  background-color: #E8EDEB;
}

.emotion-2 {
  line-height: 28px;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  color: #001E2B;
}

<div
    class="sc-bcXHqe eFamjP"
  >
    <div
      class="sc-gswNZR UJFxm"
    >
      <a
        class="lg-ui-0001 emotion-0"
        href=""
        title="Next Section"
      >
        <span
          class="emotion-1"
        >
          MongoDB Go Driver
        </span>
      </a>
      <span
        class="emotion-2"
      >
         →
      </span>
    </div>
  </div>
</DocumentFragment>
`;
